2013-11-07 MickeM
 * Fixed issue with NSCA hostname (NSCAClient load).
 * Fixed check_nt commands
 
2013-11-03 MickeM
 * Fixed so lua script are now loaded with a missing .lua extension
 * Fixed Lua some remaining invalid lua functio issues.
 * Fixed unit test for Lua scripts.
 * Fixed forwarding (for clients)
 * Fixed test_nrpe (lua)

2013-10-29 MickeM
 * Added json_sprit as a submodule to see if this works better.
 * Changed so json_sprit now builds using their own cmake file which means it should hopefully be better ready for future versions.

2013-10-28 MickeM
 * Compatiblity layer added for most "old" checks.
   The way this works is that CheckCpu is the old check and check_cpu is the new.
 * Fixed a lot of check related bugs
 * Added a bunch of check related options such as exclude and so on and so forth.

2013-10-20 MickeM
 * Added real-time checks for cpu and memory (CheckSystem)
 * Refactored client handling a bit to make it simpler to create stand alone clients.
 * Added check_nrpe client

2013-10-17 MickeM
 * A lot of Linux fixes
 * Refactored real-time stuff to make it easier to add in new places
 * NSCA/NRPE fixes
 
2013-10-10 MickeM
 * Added back CheckWMI based on new filters.
 * Fixed issues with building on Linux
 * Added support for WMI and float types (type 4 and 5)

2013-09-24 MickeM
 * Fixed issue with performance data and byte based units
 * Added total to check_pagefile

2013-09-23 MickeM
 * Removed page (since it often is wrong)
 * Added check_pagefile (to check pagefile usage)
 * removed nobp (wince it was for NT4 and we dont support nt4)
 * Removed debug symbols (since breakpad symbols work)

2013-09-19 MickeM
 * Fixed issue with skipping registry
 * Added page (commited - physical) memory metric
 
2013-09-17 MickeM
 * Added support for new eventlog API.
   This means NSClient++ can FINALLY! check all eventlogs on windows 2008 and windows 2012!

2013-09-16 MickeM
 * Fixed NRPE issue

2013-09-09 MickeM
 * Fixed check_multi