@@ -1,6 +1,10 @@
+2013-11-08 MickeM
+ * Finally fixed broken unit test on "linux" (Which was a case error as always, damn you ntfs!!)
+
 2013-11-07 MickeM
  * Fixed issue with NSCA hostname (NSCAClient load).
  * Fixed check_nt commands
+ * Added vagrant files to load-up machines and build NSClient++ (ubuntu)
  
 2013-11-03 MickeM
  * Fixed so lua script are now loaded with a missing .lua extension
